--- a/src/Leebruce/Leebruce.AngularClient/src/app/nav-menu/nav-menu.component.scss
+++ b/src/Leebruce/Leebruce.AngularClient/src/app/nav-menu/nav-menu.component.scss
@@ -1,3 +1,6 @@
+$collapse-threshold: 600px;
+$collapse-threshold-for-min: 600.02px;
+
 :host {
     color: var(--light-color);
 }
@@ -42,7 +45,7 @@
 .navbar-collapse {
     padding: 0 .5rem .5rem;
 
-    @media(min-width: 600px) {
+    @media(min-width: $collapse-threshold-for-min) {
         display: flex !important;
         padding: .5rem 1rem 0;
     }
@@ -76,7 +79,7 @@ ul.nav {
         color: inherit !important;
     }
 
-    @media(min-width: 600px) {
+    @media(min-width: $collapse-threshold-for-min) {
         margin-bottom: .75rem;
     }
 }
@@ -95,7 +98,7 @@ ul.nav {
     }
 }
 
-@media(min-width: 600px) {
+@media(min-width: $collapse-threshold-for-min) {
     .navbar-toggler {
         display: none;
     }
